RESOLVED FIXED 155388
REGRESSION (r190840): crash inside details element's slotNameFunction
https://bugs.webkit.org/show_bug.cgi?id=155388
Summary REGRESSION (r190840): crash inside details element's slotNameFunction
Ryosuke Niwa
Reported 2016-03-11 23:14:46 PST
We're doing a bad cast inside slotNameFunction. <rdar://problem/24610137>.
Attachments
Fixes the bug (5.10 KB, patch)
2016-03-11 23:22 PST, Ryosuke Niwa
no flags
Archive of layout-test-results from ews117 for mac-yosemite (850.76 KB, application/zip)
2016-03-12 00:20 PST, Build Bot
no flags
Ryosuke Niwa
Comment 1 2016-03-11 23:22:25 PST
Created attachment 273814 [details] Fixes the bug
Build Bot
Comment 2 2016-03-12 00:20:38 PST
Comment on attachment 273814 [details] Fixes the bug Attachment 273814 [details] did not pass mac-debug-ews (mac): Output: http://webkit-queues.webkit.org/results/964769 New failing tests: js/function-apply.html
Build Bot
Comment 3 2016-03-12 00:20:44 PST
Created attachment 273818 [details] Archive of layout-test-results from ews117 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews117 Port: mac-yosemite Platform: Mac OS X 10.10.5
Alexey Proskuryakov
Comment 4 2016-03-13 14:17:27 PDT
Filed bug 155411 for EWS false positive.
Ryosuke Niwa
Comment 5 2016-03-13 18:07:26 PDT
Comment on attachment 273814 [details] Fixes the bug I don't think I broke function-apply.html with this patch.
WebKit Commit Bot
Comment 6 2016-03-13 18:57:05 PDT
Comment on attachment 273814 [details] Fixes the bug Clearing flags on attachment: 273814 Committed r198090: <http://trac.webkit.org/changeset/198090>
WebKit Commit Bot
Comment 7 2016-03-13 18:57:12 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.